HYDRAN-364: Add folder name to sender info
